# ParallelCompression

./: .gitignore  CMakeLists.txt  README.md
cmake/: CheckCompilerFlags.cmake  ConfigurePGO.cmake  SetConstexprLimit.cmake
src/: main.cpp
src/compression/: Compression.hpp
src/compression/buffer/: BitBuffer.cpp  BitBuffer.hpp
src/compression/decoders/: DynamicHuffmanDecoder.cpp  DynamicHuffmanDecoder.hpp  FixedHuffmanDecoder.cpp  FixedHuffmanDecoder.hpp
src/compression/deflate/: Deflator.cpp  Deflator.hpp  Inflator.cpp  Inflator.hpp
src/compression/encoders/: DynamicHuffmanEncoder.cpp  DynamicHuffmanEncoder.hpp  FixedHuffmanEncoder.cpp  FixedHuffmanEncoder.hpp
src/compression/lz/: LZ77.cpp  LZ77.hpp
src/compression/parallel/: CRC32.hpp  ParallelCompression.cpp  ParallelCompression.hpp  ParallelDecompression.cpp  ParallelDecompression.hpp
src/compression/tree/: HuffmanTree.cpp  HuffmanTree.hpp
src/deflate/: BitBuffer.cpp  BitBuffer.hpp  DynamicHuffmanDecoder.cpp  DynamicHuffmanDecoder.hpp  DynamicHuffmanEncoder.cpp  DynamicHuffmanEncoder.hpp  FixedHuffmanDecoder.cpp  FixedHuffmanDecoder.hpp  FixedHuffmanEncoder.cpp  FixedHuffmanEncoder.hpp  Huffman.cpp  Huffman.hpp  HuffmanTree.cpp  HuffmanTree.hpp  LZ77.cpp  LZ77.hpp  StaticHuffmanDecoder.cpp  StaticHuffmanDecoder.hpp  StaticHuffmanEncoder.cpp  StaticHuffmanEncoder.hpp
src/deflate/buffer/: BitBuffer.cpp
src/deflate/decoders/: DynamicHuffmanDecoder.cpp
src/deflate/encoders/: DynamicHuffmanEncoder.cpp  FixedHuffmanEncoder.cpp
src/deflate/lz/: LZ77.cpp
